src/components/molecule/ProjectCard/Column/styles.module.css
.cardContainer {
  right: var(--spacing-04);
  bottom: var(--spacing-04);
  z-index: 10;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-02);
  width: 100%;
  height: fit-content;
  padding: var(--spacing-03);
  background-color: var(--color-white);
  border-radius: var(--spacing-02);
  box-shadow: var(--shadow-xs);
  flex-grow: 1;
  flex-shrink: 1;
}

.subCardHeader p,
.cardDescription p,
.cardButton p,
.cardHeader h3 {
  padding: 0;
  margin: 0;
}

.cardImg {
  display: flex;
  align-items: flex-end;
  position: relative;
  width: 100%;
  height: 196px;
  object-fit: cover;
  background-color: var(--color-grey-200);
  border-radius: var(--radius-2);
}

.imageBorderRadius {
  border-radius: var(--radius-2);
}

.cardHeader {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-02);
  width: 100%;
}

.subCardHeader {
  display: flex;
  gap: var(--spacing-04);
  width: 100%;
}

.btnContainer {
  display: flex;
  gap: var(--spacing-04);
}

.faseBoundNotice {
  position: relative;
  z-index: 200;
  justify-self: end;
  display: flex;
  justify-content: flex-end;
  height: fit-content;
  width: 100%;
  text-align: right;
  padding: 1rem;
  color: var(--color-white);
  font-weight: 600;
}

.faseBoundNotice__blue p {
  border-radius: var(--radius-round);
  padding: 0.3rem 0.5rem;
  width: fit-content;
  background-color: var(--color-blue-500);
}

.faseBoundNotice__green p {
  border-radius: var(--radius-round);
  width: fit-content;
  padding: 0.3rem 0.5rem;
  background-color: var(--color-green-500);
}

@media (--md-n-above) {
  .cardContainer {
    max-width: 329px;
    min-width: 304px;
  }
}

@media (--lg-n-above) {
  .cardContainer {
    max-width: 448px;
    min-width: 320px;
  }
}

